--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveDuplicatesfromSortedArray.cs" />
+    <Compile Include="RemoveElement.cs" />
     <Compile Include="ValidParentheses.cs" />
   </ItemGroup>
   <ItemGroup>
